--- a/PasswordManager/PasswordManager/MainWindow.xaml
+++ b/PasswordManager/PasswordManager/MainWindow.xaml
@@ -1,12 +1,195 @@
-﻿<Window x:Class="PasswordManager.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PasswordManager"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+﻿<Window
+    x:Class="PasswordGeneratorCore.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:PasswordGeneratorCore"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Password Generator"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d"
+    Opacity="0.95"
+    AllowsTransparency="True"
+    WindowStyle="None">
+    <Grid MouseDown="w_MouseDown">
+        <Grid.Resources>
+            <Style TargetType="Button">
 
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="Width" Value="100" />
+                <Setter Property="Background" Value="Gray" />
+                <Setter Property="Foreground" Value="White" />
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Background" Value="#555555" />
+                    </Trigger>
+                    <Trigger Property="IsPressed" Value="True">
+                        <Setter Property="Background" Value="#999999" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            <Style TargetType="Grid">
+                <Setter Property="Background" Value="#111111" />
+            </Style>
+            <Style TargetType="Menu">
+                <Setter Property="Background" Value="#111111" />
+                <Setter Property="Foreground" Value="Gray" />
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Background" Value="#111111" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            <Style TargetType="MenuItem">
+                <Setter Property="Background" Value="#111111" />
+                <Setter Property="Foreground" Value="DarkGray" />
+
+            </Style>
+            <Style TargetType="CheckBox">
+                <Setter Property="Foreground" Value="DarkGray" />
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Foreground" Value="Black" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            <Style TargetType="DataGrid">
+                <Setter Property="Background" Value="#111111" />
+                <Setter Property="Foreground" Value="Gray" />
+                <Setter Property="Padding" Value="10" />
+            </Style>
+            <Style TargetType="DataGridColumnHeader">
+                <Setter Property="Background" Value="DarkGray" />
+                <Setter Property="Foreground" Value="Black" />
+                <Setter Property="Padding" Value="5" />
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Background" Value="LightBlue" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            <Style TargetType="DataGridCell">
+                <Setter Property="Background" Value="#111111" />
+                <Setter Property="Foreground" Value="LightGray" />
+                <Setter Property="Padding" Value="10" />
+                <Style.Triggers>
+                    <Trigger Property="IsFocused" Value="True">
+                        <Setter Property="BorderBrush" Value="Red" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            <Style TargetType="DataGridRow">
+                <Setter Property="Background" Value="#272727" />
+                <Setter Property="Foreground" Value="Gray" />
+            </Style>
+        </Grid.Resources>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="0.1*" />
+        </Grid.RowDefinitions>
+        <Menu Grid.Row="1" Grid.ColumnSpan="2">
+            <MenuItem Header="_Password Length" ToolTip="Password length for the generate function">
+                <TextBox
+                    Text="20"
+                        x:Name="passLenTxt"
+                        Width="100"
+                        PreviewTextInput="OnKeyDown">
+                </TextBox>
+            </MenuItem>
+            <MenuItem
+                    x:Name="specialsMenuItem"
+                    Header="_Special Characters"
+                    ToolTip="Include/disclude special characters for password generate function" />
+            <TextBox Width="200" />
+        </Menu>
+        <DockPanel Grid.ColumnSpan="2">
+            <Label Content="Password Manager" Foreground="White" />
+            <DockPanel HorizontalAlignment="Right">
+                <DockPanel.Resources>
+                    <Style TargetType="Button">
+                        <Setter Property="Width" Value="30" />
+                        <Setter Property="Height" Value="25" />
+                        <Setter Property="FontWeight" Value="Bold" />
+                    </Style>
+                </DockPanel.Resources>
+                <Button Content="-" Click="Minimize_Click" />
+                <Button Content="X" Click="Close_Click"/>
+            </DockPanel>
+        </DockPanel>
+        <DataGrid
+            x:Name="data"
+            Grid.Row="2"
+            Grid.ColumnSpan="2"
+            AutoGenerateColumns="False"
+            CanUserResizeRows="False"
+            HorizontalAlignment="Right">
+            <DataGrid.Columns>
+                <DataGridTextColumn
+                    Width="0.1*"
+                    Binding="{Binding Id}"
+                    Header="Id" />
+                <DataGridTextColumn
+                    Width="0.25*"
+                    Binding="{Binding Website}"
+                    Header="Website"
+                    IsReadOnly="False" />
+                <DataGridTextColumn
+                    Width="0.25*"
+                    Binding="{Binding Username}"
+                    Header="Username"
+                    IsReadOnly="False" />
+                <DataGridTextColumn
+                    Width="1*"
+                    Binding="{Binding Password}"
+                    Header="Password"
+                    IsReadOnly="False" />
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button
+            x:Name="button"
+            Grid.Row="3"
+            Grid.Column="0"
+            HorizontalAlignment="Left"
+            Background="DarkRed"
+            Click="Delete_Click"
+            Content="Delete"
+            MouseEnter="Delete_Over"
+            MouseLeave="Delete_Out"
+            PreviewMouseDown="Delete_Down"
+            ToolTip="Deletes lowest Id if multiple selected" />
+        <StackPanel
+            Grid.Row="3"
+            Grid.Column="2"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                Grid.Column="2"
+                Click="Generate_Click"
+                Content="Generate"
+                ToolTip="Call generate password function" />
+            <Button
+                Grid.Column="2"
+                Click="Refresh_Click"
+                Content="Get"
+                ToolTip="Get/Refresh information from SQL Server" />
+            <Button
+                Grid.Column="2"
+                Click="Save_Click"
+                MouseEnter="Save_Over"
+                MouseLeave="Save_Out"
+                PreviewMouseDown="Save_Down"
+                Content="Save"
+                ToolTip="Saves lowest Id" 
+                Background="DarkBlue"
+                Foreground="White"/>
+        </StackPanel>
     </Grid>
 </Window>
+
