--- a/PasswordManager/PasswordManager/MainWindow.xaml
+++ b/PasswordManager/PasswordManager/MainWindow.xaml
@@ -1,59 +1,23 @@
 ﻿<Window
-    x:Class="PasswordGeneratorCore.MainWindow"
+    x:Class="PasswordManager.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:passwordmanager="clr-namespace:PasswordManager"
     Title="Password Manager"
     Width="1440"
     Height="960">
-    <Grid Background="#32363d" MouseDown="w_MouseDown">
+    <Grid Background="#32363d" MouseDown="windowMouseDown">
         <Grid.Resources>
-            <!--<Style TargetType="ListViewItem">
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Background" Value="Black" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>-->
-            <Style TargetType="Button">
-                <Setter Property="Foreground" Value="White" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Background" Value="Black" />
-                    </Trigger>
-                    <Trigger Property="IsPressed" Value="True">
-                        <Setter Property="Background" Value="#47394A" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
             <Style TargetType="Grid">
                 <Setter Property="Background" Value="#111111" />
                 <Setter Property="TextBlock.FontSize" Value="12pt" />
                 <Setter Property="TextBlock.Text" Value="Gray" />
             </Style>
-            <Style TargetType="Menu">
-                <Setter Property="Background" Value="#111111" />
-                <Setter Property="Foreground" Value="Gray" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Background" Value="#111111" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
+
             <Style TargetType="ListView">
-                <!--<Setter Property="Background" Value="#32363d" />
-                <Setter Property="Foreground" Value="DarkGray" />-->
                 <Setter Property="Foreground" Value="LightGray" />
                 <Setter Property="Margin" Value="0" />
                 <Setter Property="Padding" Value="0" />
                 <Style.Triggers>
-
-                    <!--<MultiTrigger>
-                        <MultiTrigger.Conditions>
-                            <Condition Property="IsSelected" Value="False" />
-                        </MultiTrigger.Conditions>
-                        <Setter Property="Background" Value="#2C323D" />
-                    </MultiTrigger>-->
-
                     <MultiTrigger>
                         <MultiTrigger.Conditions>
                             <Condition Property="IsSelected" Value="True" />
@@ -64,47 +28,14 @@
                         <Setter Property="Background" Value="#2C323D" />
                     </Trigger>
                 </Style.Triggers>
-                <!--<Style.Resources>
-                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Red" />
-                    <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Green" />
-                </Style.Resources>-->
             </Style>
             <Style TargetType="ListViewItem">
                 <Setter Property="Foreground" Value="White" />
-                <!--<EventSetter Event="MouseEnter" Handler="lvChange" />-->
-                <Style.Triggers>
-                    <!--<MultiTrigger>
-                        <MultiTrigger.Conditions>
-                            <Condition Property="IsMouseOver" Value="True" />
-                        </MultiTrigger.Conditions>
-                        <Setter Property="Background" Value="Blue" />
-                    </MultiTrigger>-->
-
-
-
-                    <!--<Trigger Property="IsEnabled" Value="True">
-                        <Setter Property="Foreground" Value="White" />
-                        <Setter Property="Background" Value="DarkGreen" />
-                    </Trigger>
-                    <Trigger Property="IsEnabled" Value="False">
-                        <Setter Property="Foreground" Value="White" />
-                        <Setter Property="Background" Value="DarkRed" />
-                    </Trigger>-->
-                    <!--<Trigger Property="TextBlock.IsMouseOver" Value="True">
-                        <Setter Property="Foreground" Value="Purple" />
-                        <Setter Property="TextBlock.Background" Value="Black" />
-                        <Setter Property="Opacity" Value="0" />
-                    </Trigger>-->
-                </Style.Triggers>
 
             </Style>
             <Style TargetType="CheckBox">
-                <Setter Property="Foreground" Value="DarkGray" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Foreground" Value="White" />
-                    </Trigger>
-                </Style.Triggers>
+                <Setter Property="Background" Value="#32363d" />
+                <Setter Property="Foreground" Value="LightGray" />
             </Style>
             <Style TargetType="DataGrid">
                 <Setter Property="Background" Value="#32363d" />
@@ -115,11 +46,6 @@
                 <Setter Property="Background" Value="#414354" />
                 <Setter Property="Foreground" Value="White" />
                 <Setter Property="Padding" Value="5" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Background" Value="LightBlue" />
-                    </Trigger>
-                </Style.Triggers>
             </Style>
             <Style TargetType="DataGridRow">
                 <Setter Property="Foreground" Value="Gray" />
@@ -134,31 +60,34 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="1" Grid.Column="1">
-
-            <ListView
-                Name="lvSpecials"
-                SelectionChanged="lvChange"
-                SelectionMode="Multiple" />
-            <CheckBox x:Name="all" FontSize="8pt">
-                <CheckBox.LayoutTransform>
-                    <ScaleTransform ScaleX="2" ScaleY="2" />
-                </CheckBox.LayoutTransform>
-            </CheckBox>
-            <Label x:Name="selectID" Foreground="White">ID:</Label>
-            <Label x:Name="lblWebsite" Foreground="White">Website:</Label>
+        <StackPanel Grid.Row="1" Grid.Column="1" >
+            <Grid>
+                <Grid.RowDefinitions x:Uid="rowC">
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <CheckBox Grid.Row="1" x:Name="all" FontSize="8pt" Margin="5">
+                    <CheckBox.LayoutTransform>
+                        <ScaleTransform ScaleX="2" ScaleY="2" />
+                    </CheckBox.LayoutTransform>
+                </CheckBox>
+                <Grid Grid.Row="3">
+                    <ScrollViewer>
+                        <passwordmanager:CSpecial></passwordmanager:CSpecial>
+                    </ScrollViewer>
+                </Grid>
+            </Grid>
         </StackPanel>
         <DataGrid
             x:Name="data"
             Grid.Row="1"
             Grid.Column="0"
             Margin="0"
-            HorizontalAlignment="Left"
             AlternationCount="2"
             AutoGenerateColumns="False"
             CanUserResizeRows="False"
-            Foreground="#FF9900"
-            TextCompositionManager.TextInput="cellChange">
+            Foreground="#FF9900">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
                     <EventSetter Event="MouseEnter" Handler="rowEnter" />
@@ -227,87 +156,33 @@
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Border
-                                Width="100"
-                                Height="40"
-                                Margin="10"
-                                BorderBrush="White"
-                                BorderThickness="1">
-                                <TextBlock
-                                    Background="#2C323D"
-                                    MouseEnter="btnEnter"
-                                    MouseLeave="btnCopyLeave"
-                                    
-                                    MouseLeftButtonUp="btnUp"
-                                    MouseLeftButtonDown="CopyToClipboard">
-                                    <Label Foreground="White">Copy</Label>
-                                </TextBlock>
-                            </Border>
+                            <passwordmanager:CopyBtn
+                                Background="#2C323D">
+                            </passwordmanager:CopyBtn>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Border
-                                Width="100"
-                                Height="40"
-                                Margin="10"
-                                BorderBrush="White"
-                                BorderThickness="1">
-                                <TextBlock
-                                    Background="#3D382C"
-                                    MouseEnter="btnEnter"
-                                    MouseLeave="btnGenLeave"
-                               
-                                    MouseLeftButtonDown="Generate_Click">
-                                    <Label Foreground="White">Generate</Label>
-                                </TextBlock>
-                            </Border>
+                            <passwordmanager:GenerateBtn
+                                Background="#3D382C" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Border
-                                Width="100"
-                                Height="40"
-                                Margin="10"
-                                BorderBrush="White"
-                                BorderThickness="1">
-                                <TextBlock
-                                    Background="#2F3D2F"
-                                    MouseEnter="btnEnter"
-                                    MouseLeave="btnSaveLeave"
-                               
-                                    MouseLeftButtonDown="Save_Click">
-                                    <Label Foreground="White">Save</Label>
-                                </TextBlock>
-                            </Border>
-
+                            <passwordmanager:SaveBtn
+                                Background="#2F3D2F" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Border
-                                Width="100"
-                                Height="40"
-                                Margin="10"
-                                BorderBrush="White"
-                                BorderThickness="1">
-                                <TextBlock
-                                    Background="#3D2C35"
-                                    MouseEnter="btnEnter"
-                                    MouseLeave="btnDeleteLeave"
-                               
-                                    MouseLeftButtonDown="DeleteAccount">
-                                    <Label Foreground="White">Delete</Label>
-                                </TextBlock>
-                            </Border>
-
+                            <passwordmanager:DeleteBtn
+                                Background="#3D2C35" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -315,18 +190,13 @@
         </DataGrid>
         <DockPanel
             Grid.Row="2"
-            Grid.Column="0"
-            Height="50">
-            <Button
-                Width="125"
-                Margin="5"
-                Background="#63718A"
-                Click="Refresh_Click"
-                Content="Refresh" />
+            Grid.Column="0">
+            <passwordmanager:RefreshBtn Background="#384954" />
             <DockPanel Margin="10,0">
                 <Label VerticalAlignment="Center" Foreground="White">Search:</Label>
                 <TextBox
                     Margin="5"
+                    VerticalContentAlignment="Center"
                     HorizontalAlignment="Stretch"
                     Background="#7F838A"
                     Foreground="White"
@@ -346,6 +216,7 @@
             <Label VerticalAlignment="Center" Foreground="White">Password Length:</Label>
             <TextBox
                 x:Name="passLenTxt"
+                VerticalContentAlignment="Center"
                 Margin="5"
                 Background="#7F838A"
                 FontSize="18pt"
